--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/vue-fontawesome": "^3.1.2",
     "autolinker": "^4.1.5",
     "idb": "^8.0.0",
+    "js-yaml": "^4.1.1",
     "localforage": "^1.10.0",
     "marked": "^17.0.1",
     "shaka-player": "^4.16.13",
